<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/title_hint"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/etCategory"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/category_hint"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/etContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/content_hint"
        android:inputType="textMultiLine"
        android:lines="5"
        android:gravity="top|start"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>
